app/assets/stylesheets/homepage/server_channel.scss
.server-channel-col {
  min-width: 240px;
  background-color: #2f3136;
  color: #fff;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.server-info {
  box-shadow: 0 1px 0 rgba(0, 0, 0, .2),
  0 2px 0 rgba(0, 0, 0, .06);
  box-sizing: border-box;
  -webkit-box-flex: 1;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  // flex: 1;
  font-size: 16px;
  line-height: 48px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  height: 48px;
  transition: background-color .15s ease;
  z-index: 3;

  h1 {
    margin-left: 15px;
    font-size: 16px;
    font-weight: 500;
  }

  .fa {
    color: #99AAB5;
    margin-right: 20px;
  }

  .fa:hover {
    color: #fff;
  }
}

